pxc/tests/test_031_thrattr/udcon.px
public namespace udcon;
import core::common -;

function int foo(int x) {
  return x * x;
}

pure struct bar(unit x) {
  int z = foo(5); // error: foo is not pure
  public function int get() const {
    return z;
  }
}

function void t1() {
  bar b = bar(unit());
  println(b.get());
}

t1();

